WarmUp_07_html/styles/WarmUp_07.css
body{
	background-color:white;	
	color: #444444;
}

#main{
    /* margin-top: 25px; */
    position: absolute;
    left: 30px;
    top: 25px;
}

#idExampleContainers{
    clear: both;
	
}

body[mode='warmup_07'] #idExampleContainers{
    top: 241px;
	
    position: absolute;
    width: 278px;
}


body[mode='warmup_08a'] #idExampleContainers{
    top: 297px;
}

body[mode='warmup_07a'] #idExampleContainers{
    top: 281px;
}

body[mode='warmup_08'] #idExampleContainers{
    top: 281px;
    width: 278px;	
    left: 390px;
}
	
body[mode='warmup_07a'] #idExampleContainers,
body[mode='warmup_08a'] #idExampleContainers{	
    position: absolute;
    width: 278px;	
    left: 390px;
}

body[mode='warmup_07a'] #idLeftCol{
	height: 283px;
	top: 189px;
}

body[mode='warmup_08a'] #idLeftCol{
	height: 205px;
	top: 306px;
}

body[mode='warmup_07a'] #idLeftCol,
body[mode='warmup_08a'] #idLeftCol{
    position: absolute;
    left: 0px;
}

#idLeftCol{
    width: 343px;
	
    float: left;
	background-image: url("../../common/img/bg_grip_pattern.png");
    background-repeat: repeat;
    border: thin solid #B8B8B8;
    border-radius: 3px 3px 3px 3px;
    box-shadow: 0 1px 0 0 #FFFFFF, 0 5px 11px 2px rgba(119, 119, 119, 0.4) inset;
    height: 484px;
    padding: 10px;
    margin: 10px;
    /* margin-left: 85px; */
}

.playBtnRTL:hover{
    background-image: url('../../common/Library/images/playBtn_s2.png');
}

.playBtnRTL{
	cursor:pointer;
    background-image: url('../../common/Library/images/playBtn_s1.png');
	background-size: cover;
    
	float: right;
	-moz-transform: scale(-1, 1);
	-webkit-transform: scale(-1, 1);
	-o-transform: scale(-1, 1);
	-ms-transform: scale(-1, 1);
	transform: scale(-1, 1);
}

#idName{
    text-align: left;
	
    float: left;
    /* width: 249px; */
    /* background-color: red; */
    font-size: 23px;
    padding-top: 20px;
    padding-left: 3px;
}

body[mode='warmup_08'] #main #idPlayBtnRTL,
body[mode='warmup_08a'] #main #idPlayBtnRTL{
	display: none;
}

body[mode='warmup_08'] #main #idPlayBtnLTR,
body[mode='warmup_08a'] #main #idPlayBtnLTR{
	display: block;
}

#idPlayBtnLTR,
#idPlayBtnRTL{
	width: 35px;
	height: 35px;
	margin-top: 13px;
}

.playBtnLTR:hover{
    background-image: url('../../common/Library/images/playBtn_s2.png');
}

.playBtnLTR{
	cursor:pointer;
    background-image: url('../../common/Library/images/playBtn_s1.png');
    background-size: cover;
    float: left;
}

#idIntroductionBtn:hover,
#idCompleteBtn:hover{
    background-color: #8B8B8B;
}

#idCompleteBtn{
    background-color: #979595;
	clear: both;
    width: 66px;
    padding: 15px;
    border-radius: 4px;
    cursor: pointer;
    clear: both;
    margin-left: auto;
    margin-right: auto;
	display:none;
}

body[completed="true"] #idCompleteBtn{
	display:block;
}

#idIntroductionBtn{
    background-color: #979595;
	
    width: 83px;
    padding: 7px;
    border-radius: 4px;
    cursor: pointer;
}

body[mode='warmup_08'] #idChar,
body[mode='warmup_08a'] #idChar{
	font-size: 126px;
}

#idChar{
    font-size: 45px;
	
    padding-right: 15px;
    clear: both;
    padding-bottom: 10px;
}

body[mode='warmup_08'] #idDesc,
body[mode='warmup_08a'] #idDesc{
	display:none;
}


#intro_title{
    font-size: 25px;
	
}

body[mode="warmup_08"] #idDesc{
    height: 463px;
}

body[mode="warmup_07a"] #idDesc{
    height: 143px;
}

body[mode="warmup_08a"] #idDesc{
    height: 182px;
}

#idDesc{
    text-align: left;
	
    /* height: 201px; */
	background: url("../../common/img/bg_dropbubble_50.png") repeat-x scroll center bottom #F5F5F5;
    border: 1px solid #BDBDBD;
    border-radius: 3px 3px 3px 3px;
    box-shadow: 0 2px 4px #BDBDBD;

    padding: 10px;
    height: 344px;
    overflow: auto;
}

#idRightCol{
    width: 275px;
	
    float: left;
    padding: 10px;
    padding-left: 35px;
}

body[mode='warmup_07a'] #idCharGrid{
    width: 455px;
    left: 100px;
}

body[mode='warmup_08a'] #idCharGrid{
    width: 645px;
    left: 36px;
}

body[mode='warmup_08a'] #idCharGrid,
body[mode='warmup_07a'] #idCharGrid{
    position: absolute;
    top: 0px;
}

#idCharGrid{
    width: 100%; 
	margin-bottom: 10px;
	/* height: 200px; */
}

.exampleContainer{
    clear: both;
    padding-top: 20px;
    padding-bottom: 20px;
    height: 50px;
    margin-left: 5px;
    margin-right: 5px;
    font-size: 19px;
}

.exampleContainer > .playBtnLTR,
.exampleContainer > .playBtnRTL{
	width: 25px;
	height: 25px;
}

.exampleEn{
    text-align: left;
	
    float: left;
    /* width: 152px; */
}

b{
    font-family: FuturaBold;
}

body[mode='warmup_08'] .highlight,
body[mode='warmup_08a'] .highlight{
    display: inline;
    color: #B43C4B;
    font-family: FuturaBold;
}

.highlight{
    display: inline;
    color: #B43C4B;
    font-family: FuturaBold;
}

.example
{
	text-align: right;
	padding-top: 9px;
	clear: both;
	padding-right: 10px;
}

#snippets{
    display: none;
	
}

.gridItem:hover{
	background-color: #B8B8B8;
	cursor: pointer;
}

.gridItem[visited='true']{
	background-color: #A8A5A5;
}

.gridItem{
    width: 30px;
	
    float: left;
    background-color: #E6E6E6;
    text-align: center;
    margin: 1px;
    padding: 9px 3px 3px 3px;
    height: 25px;
    border-radius: 3px;
}

body[dir='rtl'] #idPlayBtnLTR,
body[dir='rtl'] .exampleContainer > .playBtnLTR{
	display:none;
}

body[dir='ltr'] #idPlayBtnRTL,
body[dir='ltr'] .exampleContainer > .playBtnRTL{
	display:none;
}

.charImage{
    width: 79px;
	
    height: 100px;
    background-repeat: no-repeat;
    float: left;
    text-align: left;
    /* background-position-x: 60px; */
    /* background-position-y: 10px; */
    padding: 10px 30px 0px 5px;
    background-position: 60px 10px;
}

body[mode='warmup_07'] #idCharImages,
body[mode='warmup_07a'] #idCharImages,
body[mode='warmup_07'] #idCompleteBtn,
body[mode='warmup_07a'] #idCompleteBtn,
body[mode='warmup_07'] #idIntroductionBtn,
body[mode='warmup_07a'] #idIntroductionBtn{
	display:none;
}

body[mode='warmup_08a'] #idCharImages{
	display:none;
}

body[mode='warmup_08'] #idCharImages{
	margin-top: 0px;
}

#idCharImages{
    border-top: 1px solid #ACABAB;
	
    height: 121px;
    margin-top: 70px;
}

body[mode='warmup_08'][intro='true'] #main #idLeftCol #idDesc,
body[mode='warmup_08a'][intro='true'] #main #idLeftCol #idDesc{
	display:block;
	/*height: 462px;*/
}

body[mode='warmup_08'][intro='true'] #main #idLeftCol > * ,
body[mode='warmup_08a'][intro='true'] #main #idLeftCol > * {
	display: none;
}

body[item_blank="true"] #idExampleContainers,
body[item_blank="true"] #idLeftCol{
	display: none;
}

